--- a/index.html
+++ b/index.html
@@ -3,13 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Boostrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- font awesome - icons -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.0.0/css/all.css">
+    <!-- style css -->
     <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
 <body>
+    <header>
+      <div class="container top">
+            <img class="logo" src="images/Krzysztof Staszewski logo.svg" alt="krzysztof-staszewski" srcset="">
+            <div class="git"><a href="https://github.com/thempower"><i class="fa-brands fa-github"></i></a></div>
+            </div>
+          </div>
+    </header>
     <div class="blog">
         <div class="container">
-          <h1 class="logo">my blog</h1>
+          <h2> My First blog</h2>
           <main class="wrapper">
             <aside class="sidebar">
               <h2 class="section-title">All posts</h2>
