finished module 5 - added css & responsive & animation - code html debuged

--- a/index.html
+++ b/index.html
@@ -14,14 +14,13 @@
 <body>
     <header>
       <div class="container top">
-            <img class="logo" src="images/Krzysztof Staszewski logo.svg" alt="krzysztof-staszewski" srcset="">
-            <div class="git"><a href="https://github.com/thempower"><i class="fa-brands fa-github"></i></a></div>
-            </div>
-          </div>
+            <img class="logo" src="images/Krzysztof Staszewski logo.svg" alt="krzysztof-staszewski">
+            <div class="git"><a href="https://github.com/thempower"><i class="fa-brands fa-github"><span>github</span></i></a></div>
+      </div>
     </header>
     <div class="blog">
         <div class="container">
-          <h2> My First blog</h2>
+          <h2 class="title"> My First blog</h2>
           <main class="wrapper">
             <aside class="sidebar">
               <h2 class="section-title">All posts</h2>
