--- a/index.html
+++ b/index.html
@@ -190,9 +190,34 @@
           </main>
         </div>
       </div>
-      <script src="js/script.js">
-
+      <script id="template-article-link" type="text/x-handlebars-template">
+        <li><a href="#{{ id }}"><span>{{ title }}</span></a></li>
       </script>
+
+      <script id="template-author-link" type="text/x-handlebars-template">
+        <a href="#author-{{ id }}"><b>Author:</b> {{ title }}</a>
+      </script>
+
+      <script id="template-tag-link" type="text/x-handlebars-template">
+        <li><a href="#tag-{{ id }}">{{ title }}</a></li>
+      </script>
+
+      <script id="template-tagcloud-link" type="text/x-handlebars-template">
+        {{#each tags}}
+        <li><a href="#tag-{{ tag }}" class="{{ className }}">{{ tag }}</a></li>
+        {{/each}}
+      </script>
+
+      <script id="template-authorcloud-link" type="text/x-handlebars-template">
+        {{#each authors}}
+        <li><a href="#author-{{ author }}"><span class="author-name">{{ author }} ({{ count }})</span></a></li>
+        {{/each}}
+      </script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.0/handlebars.min.js"></script>
+      <script src="js/script.js"> </script>
+
+
+
 
 </body>
 </html>
